prover-ray/zkcdriver/testdata/synced/invalid/bitwise_04.zkc
//error:3:11-12:unexpected token
fn f(x:u8) -> (r:u8) {
  r = x & )
  return
}
